--- a/resources/scss/components/blog-news-list.scss
+++ b/resources/scss/components/blog-news-list.scss
@@ -58,6 +58,7 @@ section.explore-news {
 
     .author-list-wrapper {
       row-gap: 1rem;
+      align-items: end;
     }
   }
 
